--- a/vignettes/Development/Quality control/Publication/Molecular verification - acid.Rmd
+++ b/vignettes/Development/Quality control/Publication/Molecular verification - acid.Rmd
@@ -38,14 +38,11 @@ Potential_substances <- c("1-aminoanthraquinone", # no class
                           "Sb(III)" # metal
                           ) 
               
-Substance <- Potential_substances[2]
+substance <- Potential_substances[2]
 
 source("baseScripts/initWorld_onlyMolec.R")
 
-
-World$substance <- Substance
-
-substance <- World$substance
+World$substance <- substance
 ```
 
 ```{r data xlsx and R, echo=FALSE, warning=FALSE}
