--- a/vignettes/Development/Quality control/Publication/Molecular verification - metal.Rmd
+++ b/vignettes/Development/Quality control/Publication/Molecular verification - metal.Rmd
@@ -38,13 +38,11 @@ Potential_substances <- c("1-aminoanthraquinone", # no class
                           "Sb(III)" # metal
                           ) 
               
-Substance <- Potential_substances[5]
+substance <- Potential_substances[5]
 
 source("baseScripts/initWorld_onlyMolec.R")
 
-World$substance <- Substance
-
-substance <- World$substance
+World$substance <- substance
 ```
 
 ```{r data xlsx and R, echo=FALSE, warning=FALSE}
