--- a/vignettes/Development/Quality control/Publication/Particulate-verification.Rmd
+++ b/vignettes/Development/Quality control/Publication/Particulate-verification.Rmd
@@ -35,13 +35,11 @@ for rounding differences.
 ## Run the model without adjustments
 
 ```{r Initialize,include=TRUE, echo=TRUE, message=FALSE, warning=FALSE}
-Substance <- "nAg_10nm"
+substance <- "nAg_10nm"
 
 source("baseScripts/initWorld_onlyParticulate.R")
 
-World$substance <- Substance
-
-substance <- World$substance
+World$substance <- substance
 ```
 
 ```{r comparison of fluxes with test FALSE, message=FALSE, include=TRUE, echo=FALSE, warning=FALSE}
