--- a/vignettes/Development/Quality control/Publication/Microplastic_verification.Rmd
+++ b/vignettes/Development/Quality control/Publication/Microplastic_verification.Rmd
@@ -18,19 +18,20 @@ options(dplyr.summarise.inform=FALSE)
 knitr::opts_chunk$set(echo = TRUE, fig.width = 14, fig.height = 10)
 ```
 
-This vignette demonstrates the verification process of the particulate
-version of Simplebox, in this case for microplastics. First, the k's are
-compared between R and excel and consequently the steady state masses
-are compared.
+This vignette demonstrates the verification process of SBoo and
+SBooScripts using Simplebox4plastics, in this case for microplastics.
+The 1^st^ order rate constants (k's) are compared between SimpleBox in R
+and Excel^TM^ and subsequently the steady state masses are compared
+between the two implementations of the model.
 
 The world needs to be initialized for a substance. In this case, that
 substance is microplastic, which has a default radius of 2.5e-5 m.
 
-We will first show the version of the model without adjustments to match the 
-excel version. This will show the differences between excel and R. Consequently,
-we will show the version of the model that was adjusted to match the excel version. 
-This adjusted version should yield the same results as the model in excel, except 
-for rounding differences. 
+We will first show the version of the model without adjustments to match
+the excel version. This will show the differences between excel and R.
+Consequently, we will show the version of the model that was adjusted to
+match the excel version. This adjusted version should yield the same
+results as the model in excel, except for rounding differences.
 
 ## Run the model without adjustments
 
@@ -152,8 +153,8 @@ mergedkaas <- as_tibble(mergedkaas) |> mutate(relDif = diff/k_R)
 
 ## Compare k's
 
-When comparing k's between R and excel, the goal is that the relative difference
-is less than 0.001 for each k. The reason is that smaller
+When comparing k's between R and excel, the goal is that the relative
+difference is less than 0.001 for each k. The reason is that smaller
 differences often are a result of differences in rounding values between
 excel and R, and not the result of mistakes in calculations or different
 input values. In this vignette two types of k's are compared: diagonal
@@ -207,13 +208,15 @@ ggplot(sorted_diff, aes(x = from, y = reldif)) +
 ```
 
 #### Dry deposition
-As can be seen in Figure 2 above, the only relative differences between the diagonal
-k's in excel and R are in the air compartment. This is caused by a difference in 
-the dry deposition process. In R, dry deposition is implemented in a new manner, 
-according to the Loteur v2 reference guide. See v.2.2002 <https://www.rivm.nl/lotos-euros>.
 
-When using Test=TRUE, the implementation of dry deposition in R is temporarily 
-set to the old implementation that was used in excel. 
+As can be seen in Figure 2 above, the only relative differences between
+the diagonal k's in excel and R are in the air compartment. This is
+caused by a difference in the dry deposition process. In R, dry
+deposition is implemented in a new manner, according to the Loteur v2
+reference guide. See v.2.2002 <https://www.rivm.nl/lotos-euros>.
+
+When using Test=TRUE, the implementation of dry deposition in R is
+temporarily set to the old implementation that was used in excel.
 
 ### From-to k's
 
@@ -248,21 +251,24 @@ large_differences <- mergedkaas |>
 ```
 
 #### Dry deposition
-As can be seen in Figure 4, the largest relative differences in k's between R and
-excel are in the k's from air to soil and water. These differences can also be 
-attributed to the different implementation of the dry deposition process between 
-excel and R.
+
+As can be seen in Figure 4, the largest relative differences in k's
+between R and excel are in the k's from air to soil and water. These
+differences can also be attributed to the different implementation of
+the dry deposition process between excel and R.
 
 #### Thermal velocity heteroagglomeration
-A smaller difference that was found between the k's in R and excel is the value 
-for thermal velocity in heteroagglomeration. In excel, a constant value of 285K 
-was used. In R, this value was updated by calculating the value specifically 
-for the temperature of the current scale. 
+
+A smaller difference that was found between the k's in R and excel is
+the value for thermal velocity in heteroagglomeration. In excel, a
+constant value of 285K was used. In R, this value was updated by
+calculating the value specifically for the temperature of the current
+scale.
 
 ## Run again with Test=TRUE
 
-Now the value for the Test variable can be changed to TRUE, and the difference
-in k's between excel and R can be tested again: 
+Now the value for the Test variable can be changed to TRUE, and the
+difference in k's between excel and R can be tested again:
 
 ```{r include=TRUE, echo=FALSE, warning=FALSE, message=FALSE}
 World$SetConst(Test = "TRUE")
@@ -397,8 +403,8 @@ ggplot(mergedkaas, aes(x = to, y = from, color = abs(relDif))) +
   )
 ```
 
-As can be seen in Figures 5 and 6, there are no k's with a relative difference
-large than 0.001 between excel and R when Test=TRUE.
+As can be seen in Figures 5 and 6, there are no k's with a relative
+difference large than 0.001 between excel and R when Test=TRUE.
 
 ## Compare steady state emissions
 
